fixed overflow slider

--- a/client/src/components/slider/Slider.css
+++ b/client/src/components/slider/Slider.css
@@ -2,7 +2,7 @@
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .sliderTitles {
